--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,3 +18,6 @@ spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 
 jwt.secret=${SECRET_KEY}
 jwt.expiration=${EXP_TIME}
+
+logging.level.org.springframework.web.socket=TRACE
+logging.level.org.springframework.messaging=TRACE
