--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,7 @@
 spring.application.name=ChatApp
 
-
 spring.security.user.name=${ADMIN_USERNAME}
 spring.security.user.password=${ADMIN_PASSWORD}
-
 
 # PostgresSQL Configuration
 spring.datasource.url=${DATABASE_URL}
@@ -21,3 +19,13 @@ jwt.expiration=${EXP_TIME}
 
 logging.level.org.springframework.web.socket=TRACE
 logging.level.org.springframework.messaging=TRACE
+
+spring.jpa.properties.hibernate.format_sql=true
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+
+# Logging
+logging.level.com.barun.ChatApp=DEBUG
+
+# To see the values being bound to the SQL
+logging.level.org.hibernate.type=TRACE
